--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -7,7 +7,10 @@
 </head>
 
 <body>
-  <div class="card text-center">
+    <header>
+        <% include ./partials/_header %>
+    </header>
+    <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
