--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -13,17 +13,18 @@
     <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
-        <h5 class="card-title">TinyURL for: <%= longURL %></h5>
+        <h5 class="card-title"><strong>TinyURL for: <%= longURL %></strong></h5>
         <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
       </div>
-      <form class="form-inline" action="/urls" method="POST">
-        <div class="form-group mb-2">
-          <label for="longURL">Change URL:</label>
-          <input class="form-control" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 1em">
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
-      </form>
-      <div class="card-footer text-muted"></div>
+      <div class="card-footer text-center text-muted">
+        <h3><strong>Edit</strong></h3>
+    <form class="form-inline" role="form" action="/urls/<%= shortURL %>/" method="POST">
+    <div class="form-group mb-2 text-center">
+      <label for="longURL">Change URL:</label>
+      <input class="form-control" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 0.5em">
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </div>
+  </form>
   </div>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
