--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,5 +10,21 @@
           <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
         </div>
       </div>
+      <% if(username) { %>
+        <div class="navbar-brand" style="color:black">
+          Logged In As: <%= username %>
+        </div>
+        <form class="form-inline" method="POST" action="/logout">
+          <button type="submit" class="btn btn-outline-dark">Logout</button>
+        </form>
+      <% } else { %>
+      <form class="form-inline" action="/login" method="POST">
+        <div class="form-group mb-2">
+          <label for="username"></label>
+          <input class="form-control" type="text" name="username" placeholder="Username" style="width: 200px; margin: 0.5em">
+          <button type="submit" class="btn btn-outline-dark">Login</button>
+        </div>
+      </form>
+      <% } %>
     </nav>
   </header>  
