--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -18,7 +18,7 @@
       </div>
       <div class="card-footer text-center text-muted">
         <h3><strong>Edit</strong></h3>
-    <form class="form-inline" role="form" action="/urls/<%= shortURL %>/" method="POST">
+    <form class="form-inline" role="form" action="/urls/<%= shortURL %>/" method="POST" style="margin: 0 auto">
     <div class="form-group mb-2 text-center">
       <label for="longURL">Change URL:</label>
       <input class="form-control" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 0.5em">
