--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,11 +16,13 @@
 
     <main style="margin: 1em;">
       <h3>Login</h3>
-      <form class="form-inline" action="/login" method="POST">
+      <form class="form-group" action="/login" method="POST">
         <div class="form-group mb-2">
+          <label for="email" class="control label">Email</label>
           <input class="form-control" id="email" type="email" name="email" placeholder="Email" style="width: 300px; margin: 0.25em">
         </div>
         <div class="form-group mb-2">
+          <label for="password" class="control label">Password</label>
           <input class="form-control" id="password" type="password" name="password" placeholder="Password" style="width: 300px; margin: 0.25em">
         <div class="form group mb-2">
           <button type="submit" class="btn btn-primary">Login</button>
