--- a/views/register.ejs
+++ b/views/register.ejs
@@ -16,14 +16,16 @@
 
     <main style="margin: 1em;">
       <h3>Create New Account</h3>
-      <form class="form-inline" action="/register" method="POST">
+      <form class="form-group" action="/register" method="POST">
         <div class="form-group mb-2">
+          <label for="email" class="control label">Email</label>
           <input class="form-control" id="email" type="email" name="email" placeholder="Email" style="width: 300px; margin: 0.25em">
         </div>
         <div class="form-group mb-2">
+          <label for="password" class="control label">Password</label>
           <input class="form-control" id="password" type="password" name="password" placeholder="Password" style="width: 300px; margin: 0.25em">
         <div class="form group mb-2">
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-primary">Register</button>
         </div>
       </form>
     </main>
